--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
       .pb-safe-bottom {
         padding-bottom: max(2rem, env(safe-area-inset-bottom));
       }
+
+      /* Aggressive Android/iOS Touch Callout Prevention */
+      img, svg, video, canvas, audio, iframe, embed, object {
+        -webkit-touch-callout: none !important;
+        -webkit-user-select: none !important;
+        -khtml-user-select: none !important;
+        -moz-user-select: none !important;
+        -ms-user-select: none !important;
+        user-select: none !important;
+        -webkit-user-drag: none !important;
+        user-drag: none !important;
+        pointer-events: auto; /* Re-enable pointer events if needed, but controlled by React */
+      }
     </style>
   <script type="importmap">
 {
